// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden stories a fix goes from triage through build and review to delivery 1`] = `
[
  {
    "at": 1000,
    "description": null,
    "plan": null,
    "source": {
      "kind": "local",
    },
    "taskId": 142,
    "title": "Fix empty export",
    "type": "task.received",
    "v": 1,
  },
  {
    "at": 1001,
    "request": 1,
    "taskId": 142,
    "tester": false,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1002,
    "taskId": 142,
    "type": "workspace.created",
    "v": 1,
    "workspace": {
      "branch": "skel/142-fix-empty-export",
      "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    },
  },
  {
    "at": 1002,
    "request": 2,
    "role": "planner",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1003,
    "session": "session-planner",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1004,
    "outcome": "proceed",
    "plan": {
      "approve": false,
      "brief": "Empty reports crash. Look in the CSV writer.",
      "intent": "ship",
      "rigor": "full",
      "specPath": null,
    },
    "spec": null,
    "taskId": 142,
    "type": "task.triaged",
    "v": 1,
  },
  {
    "at": 1004,
    "removes": null,
    "request": 3,
    "saves": false,
    "session": "session-planner",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1005,
    "saved": "nothing_to_save",
    "session": "session-planner",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1005,
    "request": 4,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1006,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1007,
    "handover": {
      "branch": {
        "changedFiles": [
          "src/export/csv.ts",
        ],
        "head": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
      "kind": "summary",
      "text": "Empty reports now export a header row.",
    },
    "taskId": 142,
    "type": "build.done",
    "v": 1,
  },
  {
    "at": 1007,
    "removes": null,
    "request": 5,
    "saves": true,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1008,
    "saved": "saved",
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1008,
    "request": 6,
    "taskId": 142,
    "type": "main.requested",
    "v": 1,
  },
  {
    "at": 1009,
    "reviewed": {
      "changedFiles": [
        "src/export/csv.ts",
      ],
      "head": "cccccccccccccccccccccccccccccccccccccccc",
    },
    "taskId": 142,
    "type": "main.merged",
    "v": 1,
  },
  {
    "at": 1009,
    "request": 7,
    "taskId": 142,
    "tester": true,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1010,
    "copy": {
      "commit": "cccccccccccccccccccccccccccccccccccccccc",
      "path": "/repo/.skelcrew/review/142",
    },
    "taskId": 142,
    "type": "copy.created",
    "v": 1,
  },
  {
    "at": 1010,
    "request": 8,
    "role": "tester",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1011,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1012,
    "commit": "cccccccccccccccccccccccccccccccccccccccc",
    "evidence": "bun test: 212 pass",
    "taskId": 142,
    "type": "review.passed",
    "v": 1,
  },
  {
    "at": 1012,
    "removes": "/repo/.skelcrew/review/142",
    "request": 9,
    "saves": false,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1012,
    "request": 10,
    "taskId": 142,
    "type": "output.requested",
    "v": 1,
  },
  {
    "at": 1013,
    "saved": "nothing_to_save",
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1014,
    "delivered": {
      "commit": "cccccccccccccccccccccccccccccccccccccccc",
      "kind": "branch",
      "ref": "skel/142-fix-empty-export",
    },
    "taskId": 142,
    "type": "output.delivered",
    "v": 1,
  },
  {
    "at": 1014,
    "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    "taskId": 142,
    "type": "workspace.removed",
    "v": 1,
  },
]
`;

exports[`golden stories a flagged fix waits for your sign-off 1`] = `
[
  {
    "at": 1000,
    "description": null,
    "plan": {
      "approve": true,
      "brief": "Fix button color",
      "intent": "ship",
      "rigor": "full",
      "specPath": null,
    },
    "source": {
      "kind": "local",
    },
    "taskId": 142,
    "title": "Fix button color",
    "type": "task.received",
    "v": 1,
  },
  {
    "at": 1001,
    "request": 1,
    "taskId": 142,
    "tester": false,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1002,
    "taskId": 142,
    "type": "workspace.created",
    "v": 1,
    "workspace": {
      "branch": "skel/142-fix-empty-export",
      "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    },
  },
  {
    "at": 1002,
    "request": 2,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1003,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1004,
    "handover": {
      "branch": {
        "changedFiles": [
          "src/export/csv.ts",
        ],
        "head": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
      "kind": "summary",
      "text": "Empty reports now export a header row.",
    },
    "taskId": 142,
    "type": "build.done",
    "v": 1,
  },
  {
    "at": 1004,
    "removes": null,
    "request": 3,
    "saves": true,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1005,
    "saved": "saved",
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1005,
    "request": 4,
    "taskId": 142,
    "type": "main.requested",
    "v": 1,
  },
  {
    "at": 1006,
    "reviewed": {
      "changedFiles": [
        "src/export/csv.ts",
      ],
      "head": "cccccccccccccccccccccccccccccccccccccccc",
    },
    "taskId": 142,
    "type": "main.merged",
    "v": 1,
  },
  {
    "at": 1006,
    "request": 5,
    "taskId": 142,
    "tester": true,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1007,
    "copy": {
      "commit": "cccccccccccccccccccccccccccccccccccccccc",
      "path": "/repo/.skelcrew/review/142",
    },
    "taskId": 142,
    "type": "copy.created",
    "v": 1,
  },
  {
    "at": 1007,
    "request": 6,
    "role": "tester",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1008,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1009,
    "commit": "cccccccccccccccccccccccccccccccccccccccc",
    "evidence": "bun test: 212 pass",
    "taskId": 142,
    "type": "review.passed",
    "v": 1,
  },
  {
    "at": 1009,
    "removes": "/repo/.skelcrew/review/142",
    "request": 7,
    "saves": false,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1009,
    "criticalFiles": [],
    "taskId": 142,
    "type": "approval.requested",
    "v": 1,
  },
  {
    "at": 1010,
    "saved": "nothing_to_save",
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1011,
    "commit": "cccccccccccccccccccccccccccccccccccccccc",
    "taskId": 142,
    "type": "approval.given",
    "v": 1,
  },
  {
    "at": 1011,
    "request": 8,
    "taskId": 142,
    "type": "output.requested",
    "v": 1,
  },
  {
    "at": 1012,
    "delivered": {
      "commit": "cccccccccccccccccccccccccccccccccccccccc",
      "kind": "branch",
      "ref": "skel/142-fix-empty-export",
    },
    "taskId": 142,
    "type": "output.delivered",
    "v": 1,
  },
  {
    "at": 1012,
    "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    "taskId": 142,
    "type": "workspace.removed",
    "v": 1,
  },
]
`;

exports[`golden stories an answer hands over a report with a proposed task 1`] = `
[
  {
    "at": 1000,
    "description": null,
    "plan": {
      "approve": false,
      "brief": "Fix button color",
      "intent": "answer",
      "rigor": "light",
      "specPath": null,
    },
    "source": {
      "kind": "local",
    },
    "taskId": 142,
    "title": "Fix button color",
    "type": "task.received",
    "v": 1,
  },
  {
    "at": 1001,
    "request": 1,
    "taskId": 142,
    "tester": false,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1002,
    "taskId": 142,
    "type": "workspace.created",
    "v": 1,
    "workspace": {
      "branch": "skel/142-fix-empty-export",
      "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    },
  },
  {
    "at": 1002,
    "request": 2,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1003,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1004,
    "handover": {
      "branch": {
        "changedFiles": [
          "src/export/csv.ts",
        ],
        "head": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
      "kind": "report",
      "proposals": [
        {
          "description": "In search.",
          "title": "Batch the queries",
        },
      ],
      "text": "Search is slow because of N+1 queries.",
    },
    "taskId": 142,
    "type": "build.done",
    "v": 1,
  },
  {
    "at": 1004,
    "removes": null,
    "request": 3,
    "saves": false,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1005,
    "saved": "nothing_to_save",
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1005,
    "reviewed": {
      "changedFiles": [
        "src/export/csv.ts",
      ],
      "head": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    },
    "taskId": 142,
    "type": "review.ready",
    "v": 1,
  },
  {
    "at": 1005,
    "request": 4,
    "taskId": 142,
    "tester": true,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1006,
    "copy": {
      "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "path": "/repo/.skelcrew/review/142",
    },
    "taskId": 142,
    "type": "copy.created",
    "v": 1,
  },
  {
    "at": 1006,
    "request": 5,
    "role": "tester",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1007,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1008,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "evidence": "bun test: 212 pass",
    "taskId": 142,
    "type": "review.passed",
    "v": 1,
  },
  {
    "at": 1008,
    "removes": "/repo/.skelcrew/review/142",
    "request": 6,
    "saves": false,
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1008,
    "request": 7,
    "taskId": 142,
    "type": "output.requested",
    "v": 1,
  },
  {
    "at": 1009,
    "saved": "nothing_to_save",
    "session": "session-tester",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1010,
    "delivered": {
      "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "kind": "report",
      "path": "docs/answers/142.md",
    },
    "taskId": 142,
    "type": "output.delivered",
    "v": 1,
  },
  {
    "at": 1010,
    "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    "taskId": 142,
    "type": "workspace.removed",
    "v": 1,
  },
]
`;

exports[`golden stories a try is delivered straight after its merge 1`] = `
[
  {
    "at": 1000,
    "description": null,
    "plan": {
      "approve": false,
      "brief": "Fix button color",
      "intent": "try",
      "rigor": "light",
      "specPath": null,
    },
    "source": {
      "kind": "local",
    },
    "taskId": 142,
    "title": "Fix button color",
    "type": "task.received",
    "v": 1,
  },
  {
    "at": 1001,
    "request": 1,
    "taskId": 142,
    "tester": false,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1002,
    "taskId": 142,
    "type": "workspace.created",
    "v": 1,
    "workspace": {
      "branch": "skel/142-fix-empty-export",
      "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    },
  },
  {
    "at": 1002,
    "request": 2,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1003,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1004,
    "handover": {
      "branch": {
        "changedFiles": [
          "src/export/csv.ts",
        ],
        "head": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
      "kind": "summary",
      "text": "Empty reports now export a header row.",
    },
    "taskId": 142,
    "type": "build.done",
    "v": 1,
  },
  {
    "at": 1004,
    "removes": null,
    "request": 3,
    "saves": true,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopping",
    "v": 1,
  },
  {
    "at": 1005,
    "saved": "saved",
    "session": "session-builder",
    "taskId": 142,
    "type": "session.stopped",
    "v": 1,
  },
  {
    "at": 1005,
    "request": 4,
    "taskId": 142,
    "type": "main.requested",
    "v": 1,
  },
  {
    "at": 1006,
    "reviewed": {
      "changedFiles": [
        "src/export/csv.ts",
      ],
      "head": "cccccccccccccccccccccccccccccccccccccccc",
    },
    "taskId": 142,
    "type": "main.merged",
    "v": 1,
  },
  {
    "at": 1006,
    "request": 5,
    "taskId": 142,
    "type": "output.requested",
    "v": 1,
  },
  {
    "at": 1007,
    "delivered": {
      "commit": "cccccccccccccccccccccccccccccccccccccccc",
      "kind": "branch",
      "ref": "skel/142-fix-empty-export",
    },
    "taskId": 142,
    "type": "output.delivered",
    "v": 1,
  },
  {
    "at": 1007,
    "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    "taskId": 142,
    "type": "workspace.removed",
    "v": 1,
  },
]
`;

exports[`golden stories a crashed builder holds the task, and a retry starts a fresh one 1`] = `
[
  {
    "at": 1000,
    "description": null,
    "plan": {
      "approve": false,
      "brief": "Fix button color",
      "intent": "ship",
      "rigor": "light",
      "specPath": null,
    },
    "source": {
      "kind": "local",
    },
    "taskId": 142,
    "title": "Fix button color",
    "type": "task.received",
    "v": 1,
  },
  {
    "at": 1001,
    "request": 1,
    "taskId": 142,
    "tester": false,
    "type": "workspace.requested",
    "v": 1,
  },
  {
    "at": 1002,
    "taskId": 142,
    "type": "workspace.created",
    "v": 1,
    "workspace": {
      "branch": "skel/142-fix-empty-export",
      "path": "/repo/.skelcrew/worktrees/142-fix-empty-export",
    },
  },
  {
    "at": 1002,
    "request": 2,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1003,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
  {
    "at": 1004,
    "hold": {
      "exitCode": 137,
      "kind": "crashed",
      "lastLine": "Killed",
    },
    "taskId": 142,
    "type": "task.held",
    "v": 1,
  },
  {
    "at": 1005,
    "taskId": 142,
    "type": "task.released",
    "v": 1,
  },
  {
    "at": 1006,
    "request": 3,
    "role": "builder",
    "taskId": 142,
    "type": "session.requested",
    "v": 1,
  },
  {
    "at": 1007,
    "session": "session-builder",
    "taskId": 142,
    "type": "session.started",
    "v": 1,
  },
]
`;
